fix: production cors origins and server host

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DATABASE_URL="postgresql://postgres:password@localhost:5432/flash_sale"
-REDIS_URL="redis://localhost:6379"
+#DATABASE_URL="postgresql://postgres:password@localhost:5432/flash_sale"
+#REDIS_URL="redis://localhost:6379"
+DATABASE_URL="postgresql://flash_sale_db_qqwi_user:62r2KLrukeuDYj5yIhmEfB69GL4k4dNa@dpg-d66d8t56ubrc73fqp970-a.singapore-postgres.render.com/flash_sale_db_qqwi?sslmode=require"
+REDIS_URL="rediss://red-d66deod6ubrc73fr0010:kRVy7LnNtdzvCKNhpIQCcJWuQNopn5Wd@singapore-keyvalue.render.com:6379"
