--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.45.1",
     "express": "^4.21.2",
     "ioredis": "^5.9.2",
     "lucide-react": "^0.511.0",
