--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build Output
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Editor directories
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,4 +27,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.vite
+
+# 🛑 SECURITY (Critical)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
