--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "type": "module",
   "scripts": {
     "client:dev": "vite",
+    "server:dev": "tsx api/server.ts",
+    "server:worker": "tsx api/worker.ts",
+    "dev": "concurrently \"npm run client:dev\" \"npm run server:dev\" \"npm run server:worker\"",
+    "seed": "tsx prisma/seed.ts",
+    "test": "node stress-test.js",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "check": "tsc --noEmit",
-    "server:dev": "nodemon",
-    "server:worker": "tsx api/worker.ts",
-    "dev": "concurrently \"npm run client:dev\" \"npm run server:dev\" \"npm run server:worker\""
+    "check": "tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@socket.io/redis-adapter": "^8.3.0",
     "axios": "^1.13.5",
     "clsx": "^2.1.1",
@@ -26,6 +29,7 @@
     "pg": "^8.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.3.0",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
@@ -53,6 +57,7 @@
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3",
